--- a/src/assets/i18n/cn_sim.json
+++ b/src/assets/i18n/cn_sim.json
@@ -90,6 +90,7 @@
     "DMG_BONUS_CHARGED": "重击伤害加成",
     "DMG_BONUS_PLUNGING": "下落攻击伤害加成",
     "DMG_BONUS_SKILL": "元素技能伤害加成",
+    "DMG_BONUS_SKILL_FREMINET_SHATTERING_PRESSURE": "元素技能伤害加成(高压粉碎)",
     "DMG_BONUS_SKILL_NILOU_MOON": "元素技能伤害加成(水月)",
     "DMG_BONUS_SKILL_NAHIDA_TRI_KARMA": "元素技能伤害加成(灭净三业)",
     "DMG_BONUS_SKILL_ALHAITHAM_MIRROR": "元素技能伤害加成(光幕)",
@@ -139,8 +140,10 @@
     "DMG_RATE_UP_ALL": "全伤害倍率增加值",
     "DMG_RATE_UP_NORMAL": "基本攻击伤害倍率增加值",
     "DMG_RATE_UP_CHARGED": "重击伤害倍率增加值",
+    "DMG_RATE_UP_CHARGED_LYNEY_GRIN_MALKIN": "重击伤害倍率增加值(怪笑猫猫帽)",
     "DMG_RATE_UP_PLUNGING": "下落攻击伤害倍率增加值",
     "DMG_RATE_UP_SKILL": "元素技能伤害倍率增加值",
+    "DMG_RATE_UP_SKILL_FREMINET_FROST": "元素技能伤害倍率增加值(霜寒)",
     "DMG_RATE_UP_SKILL_FISCHL_OZ": "元素技能伤害倍率增加值(召唤)",
     "DMG_RATE_UP_ELEMENTAL_BURST": "元素爆发伤害倍率增加值",
     "DMG_RATE_UP_ELEMENTAL_BURST_RAIDEN_ITTOU": "元素爆发伤害倍率增加值(梦想一刀)",
@@ -186,6 +189,7 @@
     "DMG_CRIT_RATE_UP_CHARGED": "重击伤害暴击率增加值",
     "DMG_CRIT_RATE_UP_PLUNGING": "落下攻击伤害暴击率增加值",
     "DMG_CRIT_RATE_UP_SKILL": "元素技能伤害暴击率增加值",
+    "DMG_CRIT_RATE_UP_SKILL_FREMINET_SHATTERING_PRESSURE": "元素技能伤害暴击率增加值(高压粉碎)",
     "DMG_CRIT_RATE_UP_SKILL_NAHIDA_TRI_KARMA": "元素技能伤害暴击率增加值(灭净三业)",
     "DMG_CRIT_RATE_UP_ELEMENTAL_BURST": "元素爆发伤害暴击率增加值",
     "DMG_CRIT_RATE_UP_WEAPON": "武器伤害暴击率增加值",
@@ -380,7 +384,10 @@
     "LAYLA_SHOOTING_STAR": "飞星",
     "FISCHL_OZ": "奥兹(召唤)",
     "ALHAITHAM_MIRROR": "光幕",
-    "DEHYA_FIELD": "净焰剑狱领域"
+    "DEHYA_FIELD": "净焰剑狱领域",
+    "LYNEY_GRIN_MALKIN": "怪笑猫猫帽",
+    "FREMINET_FROST": "霜寒",
+    "FREMINET_SHATTERING_PRESSURE": "高压粉碎"
   },
   "AUTO": {
     "CALC": "计算",
