--- a/src/assets/i18n/cn_sim.json
+++ b/src/assets/i18n/cn_sim.json
@@ -168,6 +168,8 @@
     "DMG_VAL_UP_CHARGED": "重击伤害增加值",
     "DMG_VAL_UP_PLUNGING": "落下攻击伤害增加值",
     "DMG_VAL_UP_SKILL": "元素技能伤害增加值",
+    "DMG_VAL_UP_SKILL_TRAVELER_TORRENT_SURGE": "元素技能伤害增加值(喷发激流)",
+    "DMG_VAL_UP_SKILL_TRAVELER_DEWDROP": "元素技能伤害增加值(露滴)",
     "DMG_VAL_UP_SKILL_CYNO_BOLT": "元素技能伤害增加值(落羽的裁择)",
     "DMG_VAL_UP_SKILL_LAYLA_SHOOTING_STAR": "元素技能伤害增加值(飞星)",
     "DMG_VAL_UP_ELEMENTAL_BURST": "元素爆发伤害增加值",
@@ -387,7 +389,9 @@
     "DEHYA_FIELD": "净焰剑狱领域",
     "LYNEY_GRIN_MALKIN": "怪笑猫猫帽",
     "FREMINET_FROST": "霜寒",
-    "FREMINET_SHATTERING_PRESSURE": "高压粉碎"
+    "FREMINET_SHATTERING_PRESSURE": "高压粉碎",
+    "TRAVELER_TORRENT_SURGE": "喷发激流",
+    "TRAVELER_DEWDROP": "露滴"
   },
   "AUTO": {
     "CALC": "计算",
