--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -64,7 +64,7 @@
   },
   "PROPS": {
     "LEVEL": "Level",
-    "ASCENDED": "(broken)",
+    "ASCENDED": "(ascended)",
     "HP": "HP",
     "ATTACK": "Attack",
     "DEFENSE": "Defense",
@@ -105,55 +105,55 @@
     "DMG_ANTI_PYRO": "Pyro Resistance",
     "DMG_ANTI_HYDRO": "Hydro Resistance",
     "DMG_ANTI_DENDRO": "Dendro Resistance",
-    "HP_BASE": "Basic HP",
-    "ATTACK_BASE": "Basic Attack",
-    "DEFENSE_BASE": "Basic Defense",
+    "HP_BASE": "Base HP",
+    "ATTACK_BASE": "Base Attack",
+    "DEFENSE_BASE": "Base Defense",
     "HP_VAL_UP": "HP Increase",
     "ATTACK_VAL_UP": "Attack Increase",
     "DEFENSE_VAL_UP": "Defense Increase",
     "DMG_BONUS_WEAPON": "Weapon DMG Increase",
     "DMG_BONUS_OTHER": "Other DMG Increase",
     "DMG_BONUS_SET": "Artifact DMG Increase",
-    "HEALING_BONUS_NORMAL": "General Attack Treatment Improvement",
-    "HEALING_BONUS_SKILL": "Skill Treatment Improvement",
-    "HEALING_BONUS_ELEMENTAL_BURST": "Elemental Burst Treatment Improvement",
-    "HEALING_BONUS_WEAPON": "Weapon Treatment Improvement",
-    "HEALING_BONUS_OTHER": "Other Treatment Improvement",
-    "HEALING_BONUS_SET": "Artifact Treatment Improvement",
-    "DMG_ANTI_CRYO_MINUS": "Cryo Tolerance Reduce",
-    "DMG_ANTI_ANEMO_MINUS": "Anemo Tolerance Reduce",
-    "DMG_ANTI_PHYSICAL_MINUS": "Physical Tolerance Reduce",
-    "DMG_ANTI_ELECTRO_MINUS": "Electro Tolerance Reduce",
-    "DMG_ANTI_GEO_MINUS": "Geo Tolerance Reduce",
-    "DMG_ANTI_PYRO_MINUS": "Pyro Tolerance Reduce",
-    "DMG_ANTI_HYDRO_MINUS": "Hydro Tolerance Reduce",
-    "DMG_ANTI_DENDRO_MINUS": "Dendro Tolerance Reduce",
-    "DMG_ANTI_ALL_MINUS": "All Element Tolerance Reduce",
-    "DMG_RATE_UP_CRYO": "Cryo DMG Rate Increase",
-    "DMG_RATE_UP_ANEMO": "Anemo DMG Rate Increase",
-    "DMG_RATE_UP_PHYSICAL": "Physical DMG Rate Increase",
-    "DMG_RATE_UP_ELECTRO": "Electro DMG Rate Increase",
-    "DMG_RATE_UP_GEO": "Geo DMG Rate Increase",
-    "DMG_RATE_UP_PYRO": "Pyro DMG Rate Increase",
-    "DMG_RATE_UP_HYDRO": "Hydro DMG Rate Increase",
-    "DMG_RATE_UP_DENDRO": "Dendro DMG Rate Increase",
-    "DMG_RATE_UP_ALL": "All Element DMG Rate Increase",
-    "DMG_RATE_UP_NORMAL": "Normal DMG Rate Increase",
-    "DMG_RATE_UP_CHARGED": "Charged DMG Rate Increase",
-    "DMG_RATE_UP_CHARGED_LYNEY_GRIN_MALKIN": "Charged DMG Rate Increase (Grin-Malkin)",
-    "DMG_RATE_UP_PLUNGING": "Plunging DMG Rate Increase",
-    "DMG_RATE_UP_SKILL": "Skill DMG Rate Increase",
-    "DMG_RATE_UP_SKILL_FREMINET_FROST": "Skill DMG Rate Increase(Frost)",
-    "DMG_RATE_UP_SKILL_FISCHL_OZ": "Skill DMG Rate Increase(Summoning)",
-    "DMG_RATE_UP_ELEMENTAL_BURST": "Elemental Burst DMG Rate Increase",
-    "DMG_RATE_UP_ELEMENTAL_BURST_RAIDEN_ITTOU": "Elemental Burst DMG Rate Increase(Musou Hitotachi)",
-    "DMG_RATE_UP_ELEMENTAL_BURST_RAIDEN_ISSHIN": "Elemental Burst DMG Rate Increase(Musou Isshin)",
-    "DMG_RATE_UP_ELEMENTAL_BURST_EULA_KOUKEN": "Elemental Burst DMG Rate Increase(Lightfall Sword)",
-    "DMG_RATE_UP_WEAPON": "Weapon DMG Rate Increase",
-    "DMG_RATE_UP_OTHER": "Other DMG Rate Increase",
-    "DMG_RATE_UP_SET": "Artifact DMG Rate Increase",
-    "HEALING_RATE_UP_SKILL": "Skill Healing Rate Increase",
-    "HEALING_RATE_UP_ELEMENTAL_BURST": "Elemental Burst Healing Rate Increase",
+    "HEALING_BONUS_NORMAL": "General Attack Healing Bonus",
+    "HEALING_BONUS_SKILL": "Skill Healing Bonus",
+    "HEALING_BONUS_ELEMENTAL_BURST": "Elemental Burst Healing Bonus",
+    "HEALING_BONUS_WEAPON": "Weapon Healing Bonus",
+    "HEALING_BONUS_OTHER": "Other Healing Bonus",
+    "HEALING_BONUS_SET": "Artifact Healing Bonus",
+    "DMG_ANTI_CRYO_MINUS": "Cryo Resistance Decrease",
+    "DMG_ANTI_ANEMO_MINUS": "Anemo Resistance Decrease",
+    "DMG_ANTI_PHYSICAL_MINUS": "Physical Resistance Decrease",
+    "DMG_ANTI_ELECTRO_MINUS": "Electro Resistance Decrease",
+    "DMG_ANTI_GEO_MINUS": "Geo Resistance Decrease",
+    "DMG_ANTI_PYRO_MINUS": "Pyro Resistance Decrease",
+    "DMG_ANTI_HYDRO_MINUS": "Hydro Resistance Decrease",
+    "DMG_ANTI_DENDRO_MINUS": "Dendro Resistance Decrease",
+    "DMG_ANTI_ALL_MINUS": "All Elemental Resistance Decrease",
+    "DMG_RATE_UP_CRYO": "Cryo DMG Multiplier Increase",
+    "DMG_RATE_UP_ANEMO": "Anemo DMG Multiplier Increase",
+    "DMG_RATE_UP_PHYSICAL": "Physical DMG Multiplier Increase",
+    "DMG_RATE_UP_ELECTRO": "Electro DMG Multiplier Increase",
+    "DMG_RATE_UP_GEO": "Geo DMG Multiplier Increase",
+    "DMG_RATE_UP_PYRO": "Pyro DMG Multiplier Increase",
+    "DMG_RATE_UP_HYDRO": "Hydro DMG Multiplier Increase",
+    "DMG_RATE_UP_DENDRO": "Dendro DMG Multiplier Increase",
+    "DMG_RATE_UP_ALL": "All Element DMG Multiplier Increase",
+    "DMG_RATE_UP_NORMAL": "Normal DMG Multiplier Increase",
+    "DMG_RATE_UP_CHARGED": "Charged DMG Multiplier Increase",
+    "DMG_RATE_UP_CHARGED_LYNEY_GRIN_MALKIN": "Charged Attack DMG Multiplier Increase (Grin-Malkin)",
+    "DMG_RATE_UP_PLUNGING": "Plunging DMG Multiplier Increase",
+    "DMG_RATE_UP_SKILL": "Skill DMG Multiplier Increase",
+    "DMG_RATE_UP_SKILL_FREMINET_FROST": "Skill DMG Multiplier Increase (Frost)",
+    "DMG_RATE_UP_SKILL_FISCHL_OZ": "Skill DMG Multiplier Increase (Summoning)",
+    "DMG_RATE_UP_ELEMENTAL_BURST": "Elemental Burst DMG Multiplier Increase",
+    "DMG_RATE_UP_ELEMENTAL_BURST_RAIDEN_ITTOU": "Elemental Burst DMG Multiplier Increase (Musou Hitotachi)",
+    "DMG_RATE_UP_ELEMENTAL_BURST_RAIDEN_ISSHIN": "Elemental Burst DMG Multiplier Increase (Musou Isshin)",
+    "DMG_RATE_UP_ELEMENTAL_BURST_EULA_KOUKEN": "Elemental Burst DMG Multiplier Increase (Lightfall Sword)",
+    "DMG_RATE_UP_WEAPON": "Weapon DMG Multiplier Increase",
+    "DMG_RATE_UP_OTHER": "Other DMG Multiplier Increase",
+    "DMG_RATE_UP_SET": "Artifact DMG Multiplier Increase",
+    "HEALING_RATE_UP_SKILL": "Skill Healing Multiplier Increase",
+    "HEALING_RATE_UP_ELEMENTAL_BURST": "Elemental Burst Healing Multiplier Increase",
     "DMG_VAL_UP_CRYO": "Cryo DMG Increase",
     "DMG_VAL_UP_ANEMO": "Anemo DMG Increase",
     "DMG_VAL_UP_PHYSICAL": "Physical DMG Increase",
@@ -231,12 +231,12 @@
     "DMG_ELEMENT_SPREAD_UP": "Element Amplification (Spread)",
     "DMG_ENEMY_DEFENSE_BASE": "Enemy Basic Defense",
     "DMG_ENEMY_DEFENSE": "Enemy Defense",
-    "DMG_ENEMY_DEFENSE_DOWN": "Enemy Defense Reduce",
-    "DMG_ENEMY_DEFENSE_DOWN_NORMAL": "Enemy Defense Reduce (Normal)",
-    "DMG_ENEMY_DEFENSE_DOWN_CHARGED": "Enemy Defense Reduce (Charged)",
-    "DMG_ENEMY_DEFENSE_DOWN_PLUNGING": "Enemy Defense Reduce (Plunging)",
-    "DMG_ENEMY_DEFENSE_DOWN_SKILL": "Enemy Defense Reduce (Skill)",
-    "DMG_ENEMY_DEFENSE_DOWN_ELEMENTAL_BURST": "Enemy Defense Reduce (Elemental Burst)",
+    "DMG_ENEMY_DEFENSE_DOWN": "Enemy Defense Decrease",
+    "DMG_ENEMY_DEFENSE_DOWN_NORMAL": "Enemy Defense Decrease (Normal)",
+    "DMG_ENEMY_DEFENSE_DOWN_CHARGED": "Enemy Defense Decrease (Charged)",
+    "DMG_ENEMY_DEFENSE_DOWN_PLUNGING": "Enemy Defense Decrease (Plunging)",
+    "DMG_ENEMY_DEFENSE_DOWN_SKILL": "Enemy Defense Decrease (Skill)",
+    "DMG_ENEMY_DEFENSE_DOWN_ELEMENTAL_BURST": "Enemy Defense Decrease (Elemental Burst)",
     "DMG_ENEMY_DEFENSE_IGNORE": "Enemy Defense Ignore",
     "DMG_ENEMY_DEFENSE_IGNORE_NORMAL": "Enemy Defense Ignore (Normal)",
     "DMG_ENEMY_DEFENSE_IGNORE_CHARGED": "Enemy Defense Ignore (Charged)",
