--- a/src/assets/i18n/cn_sim.json
+++ b/src/assets/i18n/cn_sim.json
@@ -90,12 +90,6 @@
     "DMG_BONUS_CHARGED": "重击伤害加成",
     "DMG_BONUS_PLUNGING": "下落攻击伤害加成",
     "DMG_BONUS_SKILL": "元素技能伤害加成",
-    "DMG_BONUS_SKILL_FREMINET_SHATTERING_PRESSURE": "元素技能伤害加成(高压粉碎)",
-    "DMG_BONUS_SKILL_NILOU_MOON": "元素技能伤害加成(水月)",
-    "DMG_BONUS_SKILL_NAHIDA_TRI_KARMA": "元素技能伤害加成(灭净三业)",
-    "DMG_BONUS_SKILL_ALHAITHAM_MIRROR": "元素技能伤害加成(光幕)",
-    "DMG_BONUS_SKILL_DEHYA_FIELD": "元素技能伤害加成(净焰剑狱领域)",
-    "DMG_BONUS_SKILL_LAYLA_SHOOTING_STAR": "元素技能伤害加成(飞星)",
     "DMG_BONUS_ELEMENTAL_BURST": "元素爆发伤害加成",
     "DMG_ANTI_CRYO": "冰元素抗性",
     "DMG_ANTI_ANEMO": "风元素抗性",
@@ -140,20 +134,33 @@
     "DMG_RATE_UP_ALL": "全伤害倍率增加值",
     "DMG_RATE_UP_NORMAL": "基本攻击伤害倍率增加值",
     "DMG_RATE_UP_CHARGED": "重击伤害倍率增加值",
-    "DMG_RATE_UP_CHARGED_LYNEY_GRIN_MALKIN": "重击伤害倍率增加值(怪笑猫猫帽)",
     "DMG_RATE_UP_PLUNGING": "下落攻击伤害倍率增加值",
     "DMG_RATE_UP_SKILL": "元素技能伤害倍率增加值",
-    "DMG_RATE_UP_SKILL_FREMINET_FROST": "元素技能伤害倍率增加值(霜寒)",
-    "DMG_RATE_UP_SKILL_FISCHL_OZ": "元素技能伤害倍率增加值(召唤)",
     "DMG_RATE_UP_ELEMENTAL_BURST": "元素爆发伤害倍率增加值",
-    "DMG_RATE_UP_ELEMENTAL_BURST_RAIDEN_ITTOU": "元素爆发伤害倍率增加值(梦想一刀)",
-    "DMG_RATE_UP_ELEMENTAL_BURST_RAIDEN_ISSHIN": "元素爆发伤害倍率增加值(梦想一心)",
-    "DMG_RATE_UP_ELEMENTAL_BURST_EULA_KOUKEN": "元素爆发伤害倍率增加值(光降之剑)",
     "DMG_RATE_UP_WEAPON": "武器伤害倍率增加值",
     "DMG_RATE_UP_OTHER": "其他伤害倍率增加值",
     "DMG_RATE_UP_SET": "圣遗物伤害倍率增加值",
     "HEALING_RATE_UP_SKILL": "元素技能治疗倍率增加值",
     "HEALING_RATE_UP_ELEMENTAL_BURST": "元素爆发治疗倍率增加值",
+    "DMG_RATE_MULTI_CRYO": "冰元素伤害倍率乘算值",
+    "DMG_RATE_MULTI_ANEMO": "风元素伤害倍率乘算值",
+    "DMG_RATE_MULTI_PHYSICAL": "物理伤害倍率乘算值",
+    "DMG_RATE_MULTI_ELECTRO": "雷元素伤害倍率乘算值",
+    "DMG_RATE_MULTI_GEO": "岩元素伤害倍率乘算值",
+    "DMG_RATE_MULTI_PYRO": "火元素伤害倍率乘算值",
+    "DMG_RATE_MULTI_HYDRO": "水元素伤害倍率乘算值",
+    "DMG_RATE_MULTI_DENDRO": "草元素伤害倍率乘算值",
+    "DMG_RATE_MULTI_ALL": "全伤害倍率乘算值",
+    "DMG_RATE_MULTI_NORMAL": "基本攻击伤害倍率乘算值",
+    "DMG_RATE_MULTI_CHARGED": "重击伤害倍率乘算值",
+    "DMG_RATE_MULTI_PLUNGING": "下落攻击伤害倍率乘算值",
+    "DMG_RATE_MULTI_SKILL": "元素技能伤害倍率乘算值",
+    "DMG_RATE_MULTI_ELEMENTAL_BURST": "元素爆发伤害倍率乘算值",
+    "DMG_RATE_MULTI_WEAPON": "武器伤害倍率乘算值",
+    "DMG_RATE_MULTI_OTHER": "其他伤害倍率乘算值",
+    "DMG_RATE_MULTI_SET": "圣遗物伤害倍率乘算值",
+    "HEALING_RATE_MULTI_SKILL": "元素技能治疗倍率乘算值",
+    "HEALING_RATE_MULTI_ELEMENTAL_BURST": "元素爆发治疗倍率乘算值",
     "DMG_VAL_UP_CRYO": "冰元素伤害增加值",
     "DMG_VAL_UP_ANEMO": "风元素伤害增加值",
     "DMG_VAL_UP_PHYSICAL": "物理伤害增加值",
@@ -164,14 +171,9 @@
     "DMG_VAL_UP_DENDRO": "草元素伤害增加值",
     "DMG_VAL_UP_ALL": "全伤害增加值",
     "DMG_VAL_UP_NORMAL": "基本攻击伤害增加值",
-    "DMG_VAL_UP_NORMAL_CYNO_Q": "基本攻击伤害增加值(启途誓使)",
     "DMG_VAL_UP_CHARGED": "重击伤害增加值",
     "DMG_VAL_UP_PLUNGING": "落下攻击伤害增加值",
     "DMG_VAL_UP_SKILL": "元素技能伤害增加值",
-    "DMG_VAL_UP_SKILL_TRAVELER_TORRENT_SURGE": "元素技能伤害增加值(喷发激流)",
-    "DMG_VAL_UP_SKILL_TRAVELER_DEWDROP": "元素技能伤害增加值(露滴)",
-    "DMG_VAL_UP_SKILL_CYNO_BOLT": "元素技能伤害增加值(落羽的裁择)",
-    "DMG_VAL_UP_SKILL_LAYLA_SHOOTING_STAR": "元素技能伤害增加值(飞星)",
     "DMG_VAL_UP_ELEMENTAL_BURST": "元素爆发伤害增加值",
     "DMG_VAL_UP_WEAPON": "武器伤害增加值",
     "DMG_VAL_UP_OTHER": "其他伤害增加值",
@@ -191,8 +193,6 @@
     "DMG_CRIT_RATE_UP_CHARGED": "重击伤害暴击率增加值",
     "DMG_CRIT_RATE_UP_PLUNGING": "落下攻击伤害暴击率增加值",
     "DMG_CRIT_RATE_UP_SKILL": "元素技能伤害暴击率增加值",
-    "DMG_CRIT_RATE_UP_SKILL_FREMINET_SHATTERING_PRESSURE": "元素技能伤害暴击率增加值(高压粉碎)",
-    "DMG_CRIT_RATE_UP_SKILL_NAHIDA_TRI_KARMA": "元素技能伤害暴击率增加值(灭净三业)",
     "DMG_CRIT_RATE_UP_ELEMENTAL_BURST": "元素爆发伤害暴击率增加值",
     "DMG_CRIT_RATE_UP_WEAPON": "武器伤害暴击率增加值",
     "DMG_CRIT_RATE_UP_OTHER": "其他伤害暴击率增加值",
@@ -376,22 +376,26 @@
     }
   },
   "TAG": {
+    "LEFT_BRACKETS": "(",
+    "RIGHT_BRACKETS": ")",
     "RAIDEN_ITTOU": "梦想一刀",
     "RAIDEN_ISSHIN": "梦想一心",
     "EULA_KOUKEN": "光降之剑",
     "CYNO_BOLT": "落羽的裁择",
-    "CYNO_Q": "启途誓使(普通攻击)",
+    "CYNO_Q": "启途誓使<普通攻击>",
     "NILOU_MOON": "水月",
     "NAHIDA_TRI_KARMA": "灭净三业",
     "LAYLA_SHOOTING_STAR": "飞星",
-    "FISCHL_OZ": "奥兹(召唤)",
+    "FISCHL_OZ": "奥兹召唤",
     "ALHAITHAM_MIRROR": "光幕",
     "DEHYA_FIELD": "净焰剑狱领域",
     "LYNEY_GRIN_MALKIN": "怪笑猫猫帽",
     "FREMINET_FROST": "霜寒",
     "FREMINET_SHATTERING_PRESSURE": "高压粉碎",
     "TRAVELER_TORRENT_SURGE": "喷发激流",
-    "TRAVELER_DEWDROP": "露滴"
+    "TRAVELER_DEWDROP": "露滴",
+    "WRIOTHESLEY_REBUKE": "惩戒·凌跃拳",
+    "NEUVILLETTE_EQUITABLE_JUDGMENT": "衡平推裁"
   },
   "AUTO": {
     "CALC": "计算",
