--- a/src/assets/i18n/cn_tra.json
+++ b/src/assets/i18n/cn_tra.json
@@ -90,12 +90,6 @@
     "DMG_BONUS_CHARGED": "重擊傷害加成",
     "DMG_BONUS_PLUNGING": "下落攻擊傷害加成",
     "DMG_BONUS_SKILL": "元素技能傷害加成",
-    "DMG_BONUS_SKILL_FREMINET_SHATTERING_PRESSURE": "元素技能傷害加成(高壓粉碎)",
-    "DMG_BONUS_SKILL_NILOU_MOON": "元素技能傷害加成(水月)",
-    "DMG_BONUS_SKILL_NAHIDA_TRI_KARMA": "元素技能傷害加成(滅淨三業)",
-    "DMG_BONUS_SKILL_ALHAITHAM_MIRROR": "元素技能傷害加成(光幕)",
-    "DMG_BONUS_SKILL_DEHYA_FIELD": "元素技能傷害加成(淨焰劍獄領域)",
-    "DMG_BONUS_SKILL_LAYLA_SHOOTING_STAR": "元素技能傷害加成(飛星)",
     "DMG_BONUS_ELEMENTAL_BURST": "元素爆發傷害加成",
     "DMG_ANTI_CRYO": "冰元素抗性",
     "DMG_ANTI_ANEMO": "風元素抗性",
@@ -140,20 +134,33 @@
     "DMG_RATE_UP_ALL": "全傷害倍率增加值",
     "DMG_RATE_UP_NORMAL": "基本攻擊傷害倍率增加值",
     "DMG_RATE_UP_CHARGED": "重擊傷害倍率增加值",
-    "DMG_RATE_UP_CHARGED_LYNEY_GRIN_MALKIN": "重擊傷害倍率增加值(怪笑貓貓帽)",
     "DMG_RATE_UP_PLUNGING": "下落攻擊傷害倍率增加值",
     "DMG_RATE_UP_SKILL": "元素技能傷害倍率增加值",
-    "DMG_RATE_UP_SKILL_FREMINET_FROST": "元素技能傷害倍率增加值(霜寒)",
-    "DMG_RATE_UP_SKILL_FISCHL_OZ": "元素技能傷害倍率增加值(召喚)",
     "DMG_RATE_UP_ELEMENTAL_BURST": "元素爆發傷害倍率增加值",
-    "DMG_RATE_UP_ELEMENTAL_BURST_RAIDEN_ITTOU": "元素爆發傷害倍率增加值(夢想一刀)",
-    "DMG_RATE_UP_ELEMENTAL_BURST_RAIDEN_ISSHIN": "元素爆發傷害倍率增加值(夢想一心)",
-    "DMG_RATE_UP_ELEMENTAL_BURST_EULA_KOUKEN": "元素爆發傷害倍率增加值(光降之劍)",
     "DMG_RATE_UP_WEAPON": "武器傷害倍率增加值",
     "DMG_RATE_UP_OTHER": "其他傷害倍率增加值",
     "DMG_RATE_UP_SET": "聖遺物傷害倍率增加值",
     "HEALING_RATE_UP_SKILL": "元素技能治療倍率增加值",
     "HEALING_RATE_UP_ELEMENTAL_BURST": "元素爆發治療倍率增加值",
+    "DMG_RATE_MULTI_CRYO": "冰元素傷害倍率乘算值",
+    "DMG_RATE_MULTI_ANEMO": "風元素傷害倍率乘算值",
+    "DMG_RATE_MULTI_PHYSICAL": "物理傷害倍率乘算值",
+    "DMG_RATE_MULTI_ELECTRO": "雷元素傷害倍率乘算值",
+    "DMG_RATE_MULTI_GEO": "岩元素傷害倍率乘算值",
+    "DMG_RATE_MULTI_PYRO": "火元素傷害倍率乘算值",
+    "DMG_RATE_MULTI_HYDRO": "水元素傷害倍率乘算值",
+    "DMG_RATE_MULTI_DENDRO": "草元素傷害倍率乘算值",
+    "DMG_RATE_MULTI_ALL": "全傷害倍率乘算值",
+    "DMG_RATE_MULTI_NORMAL": "基本攻擊傷害倍率乘算值",
+    "DMG_RATE_MULTI_CHARGED": "重擊傷害倍率乘算值",
+    "DMG_RATE_MULTI_PLUNGING": "下落攻擊傷害倍率乘算值",
+    "DMG_RATE_MULTI_SKILL": "元素技能傷害倍率乘算值",
+    "DMG_RATE_MULTI_ELEMENTAL_BURST": "元素爆發傷害倍率乘算值",
+    "DMG_RATE_MULTI_WEAPON": "武器傷害倍率乘算值",
+    "DMG_RATE_MULTI_OTHER": "其他傷害倍率乘算值",
+    "DMG_RATE_MULTI_SET": "聖遺物傷害倍率乘算值",
+    "HEALING_RATE_MULTI_SKILL": "元素技能治療倍率乘算值",
+    "HEALING_RATE_MULTI_ELEMENTAL_BURST": "元素爆發治療倍率乘算值",
     "DMG_VAL_UP_CRYO": "冰元素傷害增加值",
     "DMG_VAL_UP_ANEMO": "風元素傷害增加值",
     "DMG_VAL_UP_PHYSICAL": "物理傷害增加值",
@@ -164,14 +171,9 @@
     "DMG_VAL_UP_DENDRO": "草元素傷害增加值",
     "DMG_VAL_UP_ALL": "全傷害增加值",
     "DMG_VAL_UP_NORMAL": "基本攻擊傷害增加值",
-    "DMG_VAL_UP_NORMAL_CYNO_Q": "基本攻擊傷害增加值(啟途誓使)",
     "DMG_VAL_UP_CHARGED": "重擊傷害增加值",
     "DMG_VAL_UP_PLUNGING": "落下攻擊傷害增加值",
     "DMG_VAL_UP_SKILL": "元素技能傷害增加值",
-    "DMG_VAL_UP_SKILL_TRAVELER_TORRENT_SURGE": "元素技能傷害增加值(噴發激流)",
-    "DMG_VAL_UP_SKILL_TRAVELER_DEWDROP": "元素技能傷害增加值(露滴)",
-    "DMG_VAL_UP_SKILL_CYNO_BOLT": "元素技能傷害增加值(落羽的裁择)",
-    "DMG_VAL_UP_SKILL_LAYLA_SHOOTING_STAR": "元素技能傷害增加值(飛星)",
     "DMG_VAL_UP_ELEMENTAL_BURST": "元素爆發傷害增加值",
     "DMG_VAL_UP_WEAPON": "武器傷害增加值",
     "DMG_VAL_UP_OTHER": "其他傷害增加值",
@@ -191,8 +193,6 @@
     "DMG_CRIT_RATE_UP_CHARGED": "重擊傷害暴擊率增加值",
     "DMG_CRIT_RATE_UP_PLUNGING": "落下攻擊傷害暴擊率增加值",
     "DMG_CRIT_RATE_UP_SKILL": "元素技能傷害暴擊率增加值",
-    "DMG_CRIT_RATE_UP_SKILL_FREMINET_SHATTERING_PRESSURE": "元素技能傷害暴擊率增加值(高壓粉碎)",
-    "DMG_CRIT_RATE_UP_SKILL_NAHIDA_TRI_KARMA": "元素技能傷害暴擊率增加值(滅淨三業)",
     "DMG_CRIT_RATE_UP_ELEMENTAL_BURST": "元素爆發傷害暴擊率增加值",
     "DMG_CRIT_RATE_UP_WEAPON": "武器傷害暴擊率增加值",
     "DMG_CRIT_RATE_UP_OTHER": "其他傷害暴擊率增加值",
@@ -376,22 +376,26 @@
     }
   },
   "TAG": {
+    "LEFT_BRACKETS": "(",
+    "RIGHT_BRACKETS": ")",
     "RAIDEN_ITTOU": "夢想一刀",
     "RAIDEN_ISSHIN": "夢想一心",
     "EULA_KOUKEN": "光降之劍",
     "CYNO_BOLT": "落羽的裁择",
-    "CYNO_Q": "啟途誓使(普通攻擊)",
+    "CYNO_Q": "啟途誓使<普通攻擊>",
     "NILOU_MOON": "水月",
     "NAHIDA_TRI_KARMA": "滅淨三業",
     "LAYLA_SHOOTING_STAR": "飛星",
-    "FISCHL_OZ": "奧茲(召喚)",
+    "FISCHL_OZ": "奧茲召喚",
     "ALHAITHAM_MIRROR": "光幕",
     "DEHYA_FIELD": "淨焰劍獄領域",
     "LYNEY_GRIN_MALKIN": "怪笑貓貓帽",
     "FREMINET_FROST": "霜寒",
     "FREMINET_SHATTERING_PRESSURE": "高壓粉碎",
     "TRAVELER_TORRENT_SURGE": "噴發激流",
-    "TRAVELER_DEWDROP": "露滴"
+    "TRAVELER_DEWDROP": "露滴",
+    "WRIOTHESLEY_REBUKE": "懲戒·凌躍拳",
+    "NEUVILLETTE_EQUITABLE_JUDGMENT": "衡平推裁"
   },
   "AUTO": {
     "CALC": "計算",
