--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -90,12 +90,6 @@
     "DMG_BONUS_CHARGED": "Charged DMG Bonus",
     "DMG_BONUS_PLUNGING": "Plunging DMG Bonus",
     "DMG_BONUS_SKILL": "Skill DMG Bonus",
-    "DMG_BONUS_SKILL_FREMINET_SHATTERING_PRESSURE": "Skill DMG Bonus (Shattering Pressure)",
-    "DMG_BONUS_SKILL_NILOU_MOON": "Skill DMG Bonus (Watery Moon)",
-    "DMG_BONUS_SKILL_NAHIDA_TRI_KARMA": "Skill DMG Bonus (Tri-Karma Purification)",
-    "DMG_BONUS_SKILL_ALHAITHAM_MIRROR": "Skill DMG Bonus (Mirror)",
-    "DMG_BONUS_SKILL_DEHYA_FIELD": "Skill DMG Bonus (Fiery Sanctum)",
-    "DMG_BONUS_SKILL_LAYLA_SHOOTING_STAR": "Skill DMG Bonus (Shooting Star)",
     "DMG_BONUS_ELEMENTAL_BURST": "Elemental Burst DMG Bonus",
     "DMG_ANTI_CRYO": "Cryo Resistance",
     "DMG_ANTI_ANEMO": "Anemo Resistance",
@@ -140,20 +134,33 @@
     "DMG_RATE_UP_ALL": "All Element DMG Multiplier Increase",
     "DMG_RATE_UP_NORMAL": "Normal DMG Multiplier Increase",
     "DMG_RATE_UP_CHARGED": "Charged DMG Multiplier Increase",
-    "DMG_RATE_UP_CHARGED_LYNEY_GRIN_MALKIN": "Charged Attack DMG Multiplier Increase (Grin-Malkin)",
     "DMG_RATE_UP_PLUNGING": "Plunging DMG Multiplier Increase",
     "DMG_RATE_UP_SKILL": "Skill DMG Multiplier Increase",
-    "DMG_RATE_UP_SKILL_FREMINET_FROST": "Skill DMG Multiplier Increase (Frost)",
-    "DMG_RATE_UP_SKILL_FISCHL_OZ": "Skill DMG Multiplier Increase (Summoning)",
     "DMG_RATE_UP_ELEMENTAL_BURST": "Elemental Burst DMG Multiplier Increase",
-    "DMG_RATE_UP_ELEMENTAL_BURST_RAIDEN_ITTOU": "Elemental Burst DMG Multiplier Increase (Musou Hitotachi)",
-    "DMG_RATE_UP_ELEMENTAL_BURST_RAIDEN_ISSHIN": "Elemental Burst DMG Multiplier Increase (Musou Isshin)",
-    "DMG_RATE_UP_ELEMENTAL_BURST_EULA_KOUKEN": "Elemental Burst DMG Multiplier Increase (Lightfall Sword)",
     "DMG_RATE_UP_WEAPON": "Weapon DMG Multiplier Increase",
     "DMG_RATE_UP_OTHER": "Other DMG Multiplier Increase",
     "DMG_RATE_UP_SET": "Artifact DMG Multiplier Increase",
     "HEALING_RATE_UP_SKILL": "Skill Healing Multiplier Increase",
     "HEALING_RATE_UP_ELEMENTAL_BURST": "Elemental Burst Healing Multiplier Increase",
+    "DMG_RATE_MULTI_CRYO": "Cryo DMG Multiplier",
+    "DMG_RATE_MULTI_ANEMO": "Anemo DMG Multiplier",
+    "DMG_RATE_MULTI_PHYSICAL": "Physical DMG Multiplier",
+    "DMG_RATE_MULTI_ELECTRO": "Electro DMG Multiplier",
+    "DMG_RATE_MULTI_GEO": "Geo DMG Multiplier",
+    "DMG_RATE_MULTI_PYRO": "Pyro DMG Multiplier",
+    "DMG_RATE_MULTI_HYDRO": "Hydro DMG Multiplier",
+    "DMG_RATE_MULTI_DENDRO": "Dendro DMG Multiplier",
+    "DMG_RATE_MULTI_ALL": "All Element DMG Multiplier",
+    "DMG_RATE_MULTI_NORMAL": "Normal DMG Multiplier",
+    "DMG_RATE_MULTI_CHARGED": "Charged DMG Multiplier",
+    "DMG_RATE_MULTI_PLUNGING": "Plunging DMG Multiplier",
+    "DMG_RATE_MULTI_SKILL": "Skill DMG Multiplier",
+    "DMG_RATE_MULTI_ELEMENTAL_BURST": "Elemental Burst DMG Multiplier",
+    "DMG_RATE_MULTI_WEAPON": "Weapon DMG Multiplier",
+    "DMG_RATE_MULTI_OTHER": "Other DMG Multiplier",
+    "DMG_RATE_MULTI_SET": "Artifact DMG Multiplier",
+    "HEALING_RATE_MULTI_SKILL": "Skill Healing Multiplier",
+    "HEALING_RATE_MULTI_ELEMENTAL_BURST": "Elemental Burst Healing Multiplier",
     "DMG_VAL_UP_CRYO": "Cryo DMG Increase",
     "DMG_VAL_UP_ANEMO": "Anemo DMG Increase",
     "DMG_VAL_UP_PHYSICAL": "Physical DMG Increase",
@@ -164,14 +171,9 @@
     "DMG_VAL_UP_DENDRO": "Dendro DMG Increase",
     "DMG_VAL_UP_ALL": "All DMG Increase",
     "DMG_VAL_UP_NORMAL": "Normal DMG Increase",
-    "DMG_VAL_UP_NORMAL_CYNO_Q": "Normal DMG Increase (Pactsworn Pathclearer)",
     "DMG_VAL_UP_CHARGED": "Charged DMG Increase",
     "DMG_VAL_UP_PLUNGING": "Plunging DMG Increase",
     "DMG_VAL_UP_SKILL": "Skill DMG Increase",
-    "DMG_VAL_UP_SKILL_TRAVELER_TORRENT_SURGE": "Skill DMG Increase (Torrent Surge)",
-    "DMG_VAL_UP_SKILL_TRAVELER_DEWDROP": "Skill DMG Increase (Dewdrop)",
-    "DMG_VAL_UP_SKILL_CYNO_BOLT": "Skill DMG Increase (Duststalker Bolt)",
-    "DMG_VAL_UP_SKILL_LAYLA_SHOOTING_STAR": "Skill DMG Increase (Shooting Star)",
     "DMG_VAL_UP_ELEMENTAL_BURST": "Elemental Burst DMG Increase",
     "DMG_VAL_UP_WEAPON": "Weapon DMG Increase",
     "DMG_VAL_UP_OTHER": "Other DMG Increase",
@@ -191,8 +193,6 @@
     "DMG_CRIT_RATE_UP_CHARGED": "Charged DMG CRIT Rate Increase",
     "DMG_CRIT_RATE_UP_PLUNGING": "Plunging DMG CRIT Rate Increase",
     "DMG_CRIT_RATE_UP_SKILL": "Skill DMG CRIT Rate Increase",
-    "DMG_CRIT_RATE_UP_SKILL_FREMINET_SHATTERING_PRESSURE": "Skill DMG CRIT Rate Increase (Shattering Pressure)",
-    "DMG_CRIT_RATE_UP_SKILL_NAHIDA_TRI_KARMA": "Skill DMG CRIT Rate Increase (Tri-Karma Purification)",
     "DMG_CRIT_RATE_UP_ELEMENTAL_BURST": "Elemental Burst DMG CRIT Rate Increase",
     "DMG_CRIT_RATE_UP_WEAPON": "Weapon DMG CRIT Rate Increase",
     "DMG_CRIT_RATE_UP_OTHER": "Other DMG CRIT Rate Increase",
@@ -376,22 +376,26 @@
     }
   },
   "TAG": {
+    "LEFT_BRACKETS": "(",
+    "RIGHT_BRACKETS": ")",
     "RAIDEN_ITTOU": "Musou Hitotachi",
     "RAIDEN_ISSHIN": "Musou Isshin",
     "EULA_KOUKEN": "Lightfall Sword",
     "CYNO_BOLT": "Duststalker Bolt",
-    "CYNO_Q": "Pactsworn Pathclearer (Normal)",
+    "CYNO_Q": "Pactsworn Pathclearer <Normal>",
     "NILOU_MOON": "Watery Moon",
     "NAHIDA_TRI_KARMA": "Tri-Karma Purification",
     "LAYLA_SHOOTING_STAR": "Shooting Star",
-    "FISCHL_OZ": "Oz's (Summoning)",
+    "FISCHL_OZ": "Oz's Summoning",
     "ALHAITHAM_MIRROR": "Mirror",
     "DEHYA_FIELD": "Fiery Sanctum",
     "LYNEY_GRIN_MALKIN": "Grin-Malkin",
     "FREMINET_FROST": "Frost",
     "FREMINET_SHATTERING_PRESSURE": "Shattering Pressure",
     "TRAVELER_TORRENT_SURGE": "Torrent Surge",
-    "TRAVELER_DEWDROP": "Dewdrop"
+    "TRAVELER_DEWDROP": "Dewdrop",
+    "WRIOTHESLEY_REBUKE": "Rebuke: Vaulting Fist",
+    "NEUVILLETTE_EQUITABLE_JUDGMENT": "Equitable Judgment"
   },
   "AUTO": {
     "CALC": "Calculate",
