--- a/src/assets/i18n/jp.json
+++ b/src/assets/i18n/jp.json
@@ -90,12 +90,6 @@
     "DMG_BONUS_CHARGED": "重撃ダメージ",
     "DMG_BONUS_PLUNGING": "落下攻撃ダメージ",
     "DMG_BONUS_SKILL": "元素スキルダメージ",
-    "DMG_BONUS_SKILL_FREMINET_SHATTERING_PRESSURE": "元素スキルダメージ(高圧粉砕)",
-    "DMG_BONUS_SKILL_NILOU_MOON": "元素スキルダメージ(水月)",
-    "DMG_BONUS_SKILL_NAHIDA_TRI_KARMA": "元素スキルダメージ(滅淨三業)",
-    "DMG_BONUS_SKILL_ALHAITHAM_MIRROR": "元素スキルダメージ(光幕)",
-    "DMG_BONUS_SKILL_DEHYA_FIELD": "元素スキルダメージ(浄焔剣獄領域)",
-    "DMG_BONUS_SKILL_LAYLA_SHOOTING_STAR": "元素スキルダメージ(飛星)",
     "DMG_BONUS_ELEMENTAL_BURST": "元素爆発ダメージ",
     "DMG_ANTI_CRYO": "氷元素耐性",
     "DMG_ANTI_ANEMO": "風元素耐性",
@@ -140,20 +134,33 @@
     "DMG_RATE_UP_ALL": "全ダメージ倍率アップ値",
     "DMG_RATE_UP_NORMAL": "基本攻撃ダメージ倍率アップ値",
     "DMG_RATE_UP_CHARGED": "重撃ダメージ倍率アップ値",
-    "DMG_RATE_UP_CHARGED_LYNEY_GRIN_MALKIN": "重撃ダメージ倍率アップ値(ファニーキャット·ハット)",
     "DMG_RATE_UP_PLUNGING": "落下攻撃ダメージ倍率アップ値",
     "DMG_RATE_UP_SKILL": "元素スキルダメージ倍率アップ値",
-    "DMG_RATE_UP_SKILL_FREMINET_FROST": "元素スキルダメージ倍率アップ値(霜寒)",
-    "DMG_RATE_UP_SKILL_FISCHL_OZ": "元素スキルダメージ倍率アップ値(召喚)",
     "DMG_RATE_UP_ELEMENTAL_BURST": "元素爆発ダメージ倍率アップ値",
-    "DMG_RATE_UP_ELEMENTAL_BURST_RAIDEN_ITTOU": "元素爆発ダメージ倍率アップ値(夢想の一刀)",
-    "DMG_RATE_UP_ELEMENTAL_BURST_RAIDEN_ISSHIN": "元素爆発ダメージ倍率アップ値(夢想の一心)",
-    "DMG_RATE_UP_ELEMENTAL_BURST_EULA_KOUKEN": "元素爆発ダメージ倍率アップ値(光臨の剣)",
     "DMG_RATE_UP_WEAPON": "武器ダメージ倍率アップ値",
     "DMG_RATE_UP_OTHER": "その他ダメージ倍率アップ値",
     "DMG_RATE_UP_SET": "聖遺物ダメージ倍率アップ値",
     "HEALING_RATE_UP_SKILL": "元素スキル治療倍率アップ値",
     "HEALING_RATE_UP_ELEMENTAL_BURST": "元素爆発治療倍率アップ値",
+    "DMG_RATE_MULTI_CRYO": "氷元素ダメージ倍率乗算値",
+    "DMG_RATE_MULTI_ANEMO": "風元素ダメージ倍率乗算値",
+    "DMG_RATE_MULTI_PHYSICAL": "物理ダメージ倍率乗算値",
+    "DMG_RATE_MULTI_ELECTRO": "雷元素ダメージ倍率乗算値",
+    "DMG_RATE_MULTI_GEO": "岩元素ダメージ倍率乗算値",
+    "DMG_RATE_MULTI_PYRO": "火元素ダメージ倍率乗算値",
+    "DMG_RATE_MULTI_HYDRO": "水元素ダメージ倍率乗算値",
+    "DMG_RATE_MULTI_DENDRO": "草元素ダメージ倍率乗算値",
+    "DMG_RATE_MULTI_ALL": "全ダメージ倍率乗算値",
+    "DMG_RATE_MULTI_NORMAL": "基本攻撃ダメージ倍率乗算値",
+    "DMG_RATE_MULTI_CHARGED": "重撃ダメージ倍率乗算値",
+    "DMG_RATE_MULTI_PLUNGING": "落下攻撃ダメージ倍率乗算値",
+    "DMG_RATE_MULTI_SKILL": "元素スキルダメージ倍率乗算値",
+    "DMG_RATE_MULTI_ELEMENTAL_BURST": "元素爆発ダメージ倍率乗算値",
+    "DMG_RATE_MULTI_WEAPON": "武器ダメージ倍率乗算値",
+    "DMG_RATE_MULTI_OTHER": "その他ダメージ倍率乗算値",
+    "DMG_RATE_MULTI_SET": "聖遺物ダメージ倍率乗算値",
+    "HEALING_RATE_MULTI_SKILL": "元素スキル治療倍率乗算値",
+    "HEALING_RATE_MULTI_ELEMENTAL_BURST": "元素爆発治療倍率乗算値",
     "DMG_VAL_UP_CRYO": "氷元素ダメージアップ値",
     "DMG_VAL_UP_ANEMO": "風元素ダメージアップ値",
     "DMG_VAL_UP_PHYSICAL": "物理ダメージアップ値",
@@ -164,14 +171,9 @@
     "DMG_VAL_UP_DENDRO": "草元素ダメージアップ値",
     "DMG_VAL_UP_ALL": "全ダメージアップ値",
     "DMG_VAL_UP_NORMAL": "基本攻撃ダメージアップ値",
-    "DMG_VAL_UP_NORMAL_CYNO_Q": "基本攻撃ダメージアップ値(啓途誓使)",
     "DMG_VAL_UP_CHARGED": "重撃ダメージアップ値",
     "DMG_VAL_UP_PLUNGING": "落下攻撃ダメージアップ値",
     "DMG_VAL_UP_SKILL": "元素スキルダメージアップ値",
-    "DMG_VAL_UP_SKILL_TRAVELER_TORRENT_SURGE": "元素スキルダメージアップ値(飛散する激流)",
-    "DMG_VAL_UP_SKILL_TRAVELER_DEWDROP": "元素スキルダメージアップ値(露雫)",
-    "DMG_VAL_UP_SKILL_CYNO_BOLT": "元素スキルダメージアップ値(落羽的裁择)",
-    "DMG_VAL_UP_SKILL_LAYLA_SHOOTING_STAR": "元素スキルダメージアップ値(飛星)",
     "DMG_VAL_UP_ELEMENTAL_BURST": "元素爆発ダメージアップ値",
     "DMG_VAL_UP_WEAPON": "武器ダメージアップ値",
     "DMG_VAL_UP_OTHER": "その他ダメージアップ値",
@@ -191,8 +193,6 @@
     "DMG_CRIT_RATE_UP_CHARGED": "重撃ダメージ会心率アップ値",
     "DMG_CRIT_RATE_UP_PLUNGING": "落下攻撃ダメージ会心率アップ値",
     "DMG_CRIT_RATE_UP_SKILL": "元素スキルダメージ会心率アップ値",
-    "DMG_CRIT_RATE_UP_SKILL_FREMINET_SHATTERING_PRESSURE": "元素スキルダメージ会心率アップ値(高圧粉砕)",
-    "DMG_CRIT_RATE_UP_SKILL_NAHIDA_TRI_KARMA": "元素スキルダメージ会心率アップ値(滅淨三業)",
     "DMG_CRIT_RATE_UP_ELEMENTAL_BURST": "元素爆発ダメージ会心率アップ値",
     "DMG_CRIT_RATE_UP_WEAPON": "武器ダメージ会心率アップ値",
     "DMG_CRIT_RATE_UP_OTHER": "その他ダメージ会心率アップ値",
@@ -376,22 +376,26 @@
     }
   },
   "TAG": {
+    "LEFT_BRACKETS": "(",
+    "RIGHT_BRACKETS": ")",
     "RAIDEN_ITTOU": "夢想の一刀",
     "RAIDEN_ISSHIN": "夢想の一心",
     "EULA_KOUKEN": "光臨の剣",
     "CYNO_BOLT": "落羽的裁择",
-    "CYNO_Q": "啓途誓使(通常攻撃)",
+    "CYNO_Q": "啓途誓使<通常攻撃>",
     "NILOU_MOON": "水月",
     "NAHIDA_TRI_KARMA": "滅浄三業",
     "LAYLA_SHOOTING_STAR": "飛星",
-    "FISCHL_OZ": "オズ(召喚)",
+    "FISCHL_OZ": "オズ召喚",
     "ALHAITHAM_MIRROR": "光幕",
     "DEHYA_FIELD": "浄焔剣獄領域",
     "LYNEY_GRIN_MALKIN": "ファニーキャット·ハット",
     "FREMINET_FROST": "霜寒",
     "FREMINET_SHATTERING_PRESSURE": "高圧粉砕",
     "TRAVELER_TORRENT_SURGE": "飛散する激流",
-    "TRAVELER_DEWDROP": "露雫"
+    "TRAVELER_DEWDROP": "露雫",
+    "WRIOTHESLEY_REBUKE": "誅罰",
+    "NEUVILLETTE_EQUITABLE_JUDGMENT": "衡平な裁量"
   },
   "AUTO": {
     "CALC": "計算",
